--- a/public/css/pag.css
+++ b/public/css/pag.css
@@ -183,4 +183,22 @@
     font-size: 16px;
     cursor: pointer;
   }
+
+  .cierre{
+    background-color: #ffffff;
+      color: #000000;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      text-align: center;
+      display: inline-flex;
+      align-items: center;
+      width: 120px;
+      height: 63px;
+  }
+  
+  .cierre:hover {
+    background-color: rgb(97, 196, 168);  
+    color: #000000;
+  }
   
