--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -186,3 +186,29 @@ h2{
 p{
   font-family: Arial, Helvetica, sans-serif;
 }
+
+table{
+  width: 100%;
+  left: 0px;
+  font-size: 16px;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 400;
+  letter-spacing: 0px;
+  text-align: center;
+  vertical-align: top;
+  max-width: 100%;
+  color: #000000;
+  margin: 0px;
+}
+
+form input[type="number"] {
+  width: 100%;
+  padding: 11px;
+  margin-bottom: 11px;
+  border: 2px solid #ccc;
+  border-radius: 7px;
+}
+
+a{
+  font-family: Arial, Helvetica, sans-serif;
+}
